# duckMuPDF

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
src/: mupdf_wrapper.c  pdf_to_markdown.cpp  pdfmd_extension.cpp
src/include/: mupdf_wrapper.h  pdfmd_extension.hpp
test/sql/: pdfmd.test
